fix: missing background color in credential card

--- a/src/components/credential-card/d-credential-card.css
+++ b/src/components/credential-card/d-credential-card.css
@@ -1,5 +1,5 @@
 :host {
-  @apply w-full inline-flex flex-col items-start gap-2.5 px-5 py-5 rounded-lg bg-no-repeat bg-cover bg-gradient-to-r from-primary to-transparent;
+  @apply w-full inline-flex flex-col items-start gap-2.5 px-5 py-5 rounded-lg bg-no-repeat bg-primary bg-cover;
   background-image: var(--background-card-url);
 }
 
